...
/* Class = "UITableViewController"; title = "Main Menu"; ObjectID = "7bK-jq-Zjz"; */
"7bK-jq-Zjz.title" = "Main Menu";

/* Class = "UIButton"; normalTitle = "Informacje"; ObjectID = "7yP-jM-hLz"; */
"7yP-jM-hLz.normalTitle" = "Information";

/* Class = "UIButton"; normalTitle = "Paczka"; ObjectID = "83R-r7-GV6"; */
"83R-r7-GV6.normalTitle" = "Package";

/* Class = "UILabel"; text = "Title"; ObjectID = "Arm-wq-HPj"; */
"Arm-wq-HPj.text" = "Title";

/* Class = "UIButton"; normalTitle = "Wyślij"; ObjectID = "AwQ-RQ-FVE"; */
...
/* Class = "UILabel"; text = "Label"; ObjectID = "NL8-FQ-amF"; */
"NL8-FQ-amF.text" = "Label";

/* Class = "UILabel"; text = "Title"; ObjectID = "O7S-qC-hom"; */
"O7S-qC-hom.text" = "Title";

/* Class = "UINavigationController"; title = "MainMenu"; ObjectID = "RMx-3f-FxP"; */
"RMx-3f-FxP.title" = "MainMenu";

/* Class = "UIButton"; normalTitle = "Button"; ObjectID = "RUW-it-9Bd"; */
"RUW-it-9Bd.normalTitle" = "Button";

/* Class = "UILabel"; text = "Detail"; ObjectID = "RnY-Oq-htb"; */
...
