...
    
    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        if indexPath.row == packages.count {
            let cell = tableView.dequeueReusableCell(withIdentifier: "NewPackageCell") as! NewPackageCell

            cell.newPackageButton.setTitle("", for: .normal)
            cell.newPackageButton.setImage(UIImage(systemName: "plus.circle"), for: .normal)

            cell.cellDelegate = self
            
            return cell
        }
        
...
