...

    override func viewDidLoad() {
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addDrawSetting(_:)))

        NotificationCenter.default.addObserver(self, selector: #selector(reloadDrawSettings), name: .reloadDrawSettings, object: nil)

        self.tableView.accessibilityIdentifier = "randomItemMenu"
        super.viewDidLoad()
    }

    @objc
    func reloadDrawSettings() {
        drawSettings = Load.drawSettings()
...
