...
        CoreDataStack.saveContext()
        
        return currency
    }
    
    static func createBasicCurrency() {
        Currency.create(name: "PLN", rate: 1, subList: [("Zł", 1), ("Gr", 100)])
        Currency.create(name: "ZkSrM", rate: 1, subList: [("Zk", 1), ("Sr", 12), ("M", 12)])
        CoreDataStack.saveContext()
    }
}

