...
				self.addNewSubCurrencySection()
        }

		let removeSubCurrencyRow = LabelRowFormer<CenteredLabelCell>(instantiateType: .Nib(nibName: "CenteredLabelCell")) {
				$0.centerTextLabel.textColor = .red
			}.configure {
				$0.text = NSLocalizedString("Remove SubCurrency", comment: "")
			}.onSelected {[unowned self] _ in
				self.removeSubCurrency()
		}
	
        let createSubCurrencySection = SectionFormer(rowFormers: [addSubCurrencyRow, removeSubCurrencyRow])

...
