...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Main menu" id="Pg0-1J-xzU"/>
                    <connections>
                        <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showCharacterDetail" id="jH0-cX-p4V"/>
                        <segue destination="ERJ-FY-coC" kind="show" identifier="showSettings" id="Hs9-rX-etG"/>
                        <segue destination="a0z-H3-ndm" kind="showDetail" identifier="showMap" id="fxf-o0-LjE"/>
                        <segue destination="ql2-IU-CCY" kind="showDetail" identifier="showTeamView" id="VdB-Oq-Wn3"/>
                        <segue destination="v25-R4-Tyh" kind="show" identifier="showRNG" id="VSh-0I-bo7"/>
...
            </objects>
            <point key="canvasLocation" x="842" y="-630"/>
        </scene>
        <!--Losowanie-->
        <scene sceneID="zQM-Fp-MAn">
            <objects>
                <tableViewController title="Losowanie" id="v25-R4-Tyh" customClass="RandomNumberGenerator" customModule="RPGAapp" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="rcr-yQ-fzu">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="1024"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="mam-yB-ULe" style="IBUITableViewCellStyleDefault" id="9IG-JS-TxK">
...
