...
	
		equipmentDiffCalculator = SingleSectionTableViewDiffCalculator(tableView: equipmentTable)
		abilityDiffCalculator = SingleSectionTableViewDiffCalculator(tableView: abilityTable, initialRows: [], sectionIndex: 0)
		visibilitiesDiffCalculator = SingleSectionTableViewDiffCalculator(tableView: visibilitiesTable, initialRows: [], sectionIndex: 0)
	
		deleteButton.setTitle("", for: .normal)
		deleteButton.setImage(UIImage(systemName: "trash"), for: .normal)
	
		editButton.setTitle("", for: .normal)
		editButton.setImage(UIImage(systemName: "square.and.pencil"), for: .normal)
	
		abilityLabel.text = NSLocalizedString("Abilities", comment: "")
		equipmentLabel.text = NSLocalizedString("Equipment", comment: "")
		moneyLabel.text = NSLocalizedString("Money", comment: "")
		visibilitiesLabel.text = NSLocalizedString("Visibilities", comment: "")
	
...
