...
import Foundation
import UIKit

class ItemMenu: UITableViewController {

    let itemMenuItems = [("Katalog","showCatalogeView","showCatalogeDetailView"),
                         ("Losowanie Przedmiotu","showRandomItemView","showRandomItemDetailView"),
                         ("Handlarze","showHandlarzeView","showHandlarzeDetailView"),
                         ("Paczki","showPackageViewer","")]

    override func numberOfSections(in tableView: UITableView) -> Int {
        return 1
    }
...
