...
        setDiffTable()
        self.diffCalculator = SingleSectionTableViewDiffCalculator(tableView: tableView, initialRows: diffTable, sectionIndex: 0)
        super.viewDidLoad()
    }

    override func viewDidAppear(_ animated: Bool) {
        tableView.accessibilityIdentifier = "selectedTable"
        NotificationCenter.default.addObserver(self, selector: #selector(reloadTableData), name: .reloadRandomItemTable, object: nil)
        super.viewDidAppear(animated)
    }

    func numberOfSections(in tableView: UITableView) -> Int {
        return 1
...
